[project]
name = "one-to-two"
version = "0.1.0"
description = "One-to-two stock prediction tool"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "akshare>=1.10.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "jinja2>=3.0.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
train = "src.pipeline.train_model:main"
run-daily = "src.pipeline.daily:main"
train-rolling = "src.pipeline.rolling:main"
backtest-emotion = "src.pipeline.backtest_emotion:main"
heatmap = "src.pipeline.heatmap:main"
sync-cache = "src.data.sync_cache:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501", "E402", "N806", "N803", "E741", "W293", "W291", "B006"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["N806", "N803", "E741"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_any_return = false
strict = false
